--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -1,1 +1,33 @@
-<p>product-detail works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="https://images.ctfassets.net/wftzjgk28cx8/3Lc7vNiw7ikHZcLlnJsJCM/b57e399953ddbb02e84c90ddb763b3ab/MIGRATION_W_TASSELS_0000_WHITE-BLK.jpg?w=1440&h=1440&fit=fill" width="100%" height="100%">
+        </div>
+        <div class="col-md-8">
+          <h2 *ngFor="let item of product">{{product.title}}</h2>
+          <p>$601 — $7204</p>
+          <p>This rug places the Berber symbol for 'bird' over a field of color of your choosing.</p>
+
+
+          <div class="accordion">
+            <div class="accordion-item" *ngFor="let item of productFeatures; index as i;">
+              <h2 class="accordion-header">
+                <button class="accordion-button" (click)="panelExpanded = !panelExpanded" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#collapseOne'+i" aria-expanded="true" [attr.aria-controls]="'collapseOne'+i">
+                  {{item.title}}
+                </button>
+              </h2>
+              <div [attr.id]="'collapseOne'+i" class="accordion-collapse collapse">
+                <div class="accordion-body">
+                  {{item.description}}
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
