--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -3,14 +3,12 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-md-4">
-          <img src="https://images.ctfassets.net/wftzjgk28cx8/3Lc7vNiw7ikHZcLlnJsJCM/b57e399953ddbb02e84c90ddb763b3ab/MIGRATION_W_TASSELS_0000_WHITE-BLK.jpg?w=1440&h=1440&fit=fill" width="100%" height="100%">
+          <img (click)="rotate($event)" src="{{product.image}}" width="100%" height="100%">
         </div>
         <div class="col-md-8">
-          <h2 *ngFor="let item of product">{{product.title}}</h2>
-          <p>$601 — $7204</p>
-          <p>This rug places the Berber symbol for 'bird' over a field of color of your choosing.</p>
-
-
+          <h2>{{product.title}}</h2>
+          <p>{{product.price_range}}</p>
+          <div class="product_description" [innerHTML]="product.description"></div>
           <div class="accordion">
             <div class="accordion-item" *ngFor="let item of productFeatures; index as i;">
               <h2 class="accordion-header">
@@ -26,6 +24,14 @@
             </div>
           </div>
 
+        </div>
+      </div>
+      <div class="row">
+        <p (click)="showallcolors()">Colors</p>
+        <div *ngIf="showcolors">
+        <ul *ngFor="let variation of productVariation">
+          <li (click)="variantProduct(variation.variant_id)">{{variation.attribute1}} {{ variation.attribute2}}</li>
+        </ul>
         </div>
       </div>
     </div>
