--- a/src/app/productlist/productlist.component.html
+++ b/src/app/productlist/productlist.component.html
@@ -1,17 +1,18 @@
+<div class="row">
+  <div class="col-md-12">
+      <div class="row">
+          <div class="col-md-6" *ngFor="let product of products">
+            <img style="height:50%;width: 50%;" src="{{  product['image'] }}" alt="Hover">
+            <div class="">
+                <span class="">{{ product['title'] }}</span>
+                  <br>
+                   <div [innerHTML]="product['description']"></div>
+                  <br>
+                  {{  product['price_range'] }} 
+              </div>
+          </div>
+      </div>
+    
+  </div>
+</div>
 
-    <div class="row">
-        <div class="col-md-6" *ngFor="let product of product">
-          <img style="height:50%;width: 50%;" src="{{  product['image'] }}" alt="Hover">
-           <div class="">
-              <span class="">{{ product['title'] }}</span>
-              
-                <br>
-                {{ product['descripation']  }}
-              
-              <br>
-              
-                {{  product['price_range'] }}
-              
-            </div>
-        </div>
-    </div>
