--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active" *ngFor="let menu of menu">
-          <a class="nav-link" href="#">{{menu.menu_title}} <span class="sr-only"></span></a>
-        </li>
-        <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li> -->
+      <ul class="navbar-nav mr-auto" *ngFor="let menu of menu">
+        <div *ngIf="menu.type_category != ''; else parentMenu">
+          
+          <li class="nav-item dropdown" >
+            <a (click)="dropdown()" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{menu.menu_title}}
+            </a>
+            <div class="dropdown-menu" [ngClass]="{'dropdownMenu': openDropdown}" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" *ngFor="let submenu of submenu" routerLink="{{submenu.link}}">{{submenu.menu_title}}</a>
+            </div>
+          </li>
+        </div>
+        <ng-template #parentMenu>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="{{menu.link}}">{{menu.menu_title}} <span class="sr-only"></span></a>
+          </li>
+        </ng-template>
       </ul>
     </div>
+  </div>
   </nav>
+
+
+  
