add header and footer design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<!-----
+<h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h1>
+<h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h2>
+<h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h3>
+<h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h4>
+<h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h5>
+<h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, minima! adipisicing elit. Sunt, minima!</h6>
+-->
