--- a/src/styles.scss
+++ b/src/styles.scss
@@ -192,6 +192,14 @@ section{
   padding-bottom: 4rem;
 }
 
+.black-btn{
+  color: #000;
+  background-color: #fff;
+  font-size: 16px;
+  border-radius: 25px;
+  font-weight: 500;
+}
+
 
 /*================(Main CSS Start)=============*/
 
@@ -234,8 +242,22 @@ padding: 4rem 0rem;
 }
 
 .top-footer .navbar-nav .nav-item .nav-link{
+  font-weight: 600;
   font-size: 14px;
 }
+
+.top-footer .col-md-3{
+  width: 23%;
+}
+
+.top-footer .col-md-3:first-child{
+  width: 31%;
+}
+
+
+
+
+
 
 .top-footer .navbar-nav .nav-item .nav-link:hover , .top-footer .navbar-nav .nav-item .nav-link:focus{
   color:#627b80 !important;
@@ -255,6 +277,42 @@ padding: 4rem 0rem;
 .bottom-footer p{
   color: #fff;
 }
+
+/************Footer CSS Ends*********/
+
+/*************Banner CSS Starts*******/
+#banner-section{
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  background: linear-gradient(-45deg, rgb(56 73 77 / 50%), rgb(56 73 77 / 50%)), url(assets/img/banner.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#banner-section .container{
+  max-width: 1100px !important;
+  width: 100%;
+}
+
+#banner-section h1{
+  color: #fff;
+}
+
+#banner-section h6{
+  color: #fff;
+}
+
+#banner-section button{
+  padding:0.8rem;
+  width: 150px;
+}
+
+
+
+
+
+/*************Banner CSS Ends*********/
+
 
 
 
