--- a/src/app/productlist/productlist.component.html
+++ b/src/app/productlist/productlist.component.html
@@ -1,18 +1,30 @@
-<div class="row">
-  <div class="col-md-12">
-      <div class="row">
-          <div class="col-md-6" *ngFor="let product of products">
-            <img style="height:50%;width: 50%;" src="{{  product['image'] }}" alt="Hover">
-            <div class="">
-                <span class="">{{ product['title'] }}</span>
-                  <br>
-                   <div [innerHTML]="product['description']"></div>
-                  <br>
-                  {{  product['price_range'] }} 
-              </div>
-          </div>
-      </div>
-    
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+        <div class="collection-hero">
+          <h1 class="collection-title">{{ customize_blog.title }}</h1>
+          <div class="collection-description">
+            <p [innerHTML]="customize_blog.description"><br></p></div>
+          <img class="collection-image" src="{{ customize_blog.image  }}">
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6" *ngFor="let product of products">
+              <img style="height:50%;width: 50%;" src="{{  product['image'] }}" alt="Hover">
+              <div class="">
+                  <span class="">{{ product['title'] }}</span>
+                    <br>
+                    <div [innerHTML]="product['description']"></div>
+                    <br>
+                    {{  product['price_range'] }} 
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
+    <div class="col-md-12">
+        <app-footer-contact></app-footer-contact>
+    </div>
   </div>
 </div>
 
