--- a/src/styles.scss
+++ b/src/styles.scss
@@ -250,7 +250,7 @@ section{
 /***************Footer Css Starts*******/
 
 .top-footer{
-background: #eeeeee;
+  background-color: #e7e3dc;
 padding: 4rem 0rem;
 }
 
@@ -321,7 +321,7 @@ padding: 4rem 0rem;
 
 #section1{
   background-image: url("assets/img/sec-bg1.png");
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
 }
 
@@ -351,9 +351,9 @@ padding: 4rem 0rem;
 }
 
 
-/******Section3***********/
+/******Section3 css start***********/
 #section3 .container{
-  max-width: 700px !important;
+  max-width: 800px !important;
   width: 100%;
 }
 
@@ -382,9 +382,270 @@ padding: 4rem 0rem;
 #section3 .box{
   z-index: 100000;
   padding:1.5rem;
-  background-color: #eeeeee;
+  background-color: #e7e3dc;
+}
+
+/***********Section3 css End********/
+
+/***********Section4 css Start********/
+#section4{
+  background-image: url("assets/img/sec-bg2.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+#section4 h2::after{
+  content: '';
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #627b80;
+    bottom: 0; 
+    margin-top: 5px;
+}
+
+#section4 button i{
+  padding-left: 10px;
+}
+/***********Section4 css End********/
+$bubble-count: 50;
+$sway-type: "sway-left-to-right", "sway-right-to-left";
+
+@function random_range($min, $max) {
+  $rand: random();
+  $random_range: $min + floor($rand * (($max - $min) + 1));
+  @return $random_range;
+}
+
+@function sample($list) {
+  @return nth($list, random(length($list)));
+}
+
+.bubbles {
+  position: relative;
+  width: 100%;
+  
+  overflow: hidden;
+}
+
+.bubble {
+  position: absolute;
+  left: var(--bubble-left-offset);
+  bottom: -75%;
+  display: block;
+  width: var(--bubble-radius);
+  height: var(--bubble-radius);
+  border-radius: 50%;
+  animation: float-up var(--bubble-float-duration) var(--bubble-float-delay) ease-in infinite;
+
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background:#e7e3dcb0;
+    border-radius: inherit;
+    animation: var(--bubble-sway-type) var(--bubble-sway-duration) var(--bubble-sway-delay) ease-in-out alternate infinite;
+  }
+
+  @for $i from 0 through $bubble-count {
+    &:nth-child(#{$i}) {
+      --bubble-left-offset: #{random_range(0vw, 100vw)};
+      --bubble-radius: #{random_range(1vw, 10vw)};
+      --bubble-float-duration: #{random_range(6s, 12s)};
+      --bubble-sway-duration: #{random_range(4s, 6s)};
+      --bubble-float-delay: #{random_range(0s, 4s)};
+      --bubble-sway-delay: #{random_range(0s, 4s)};
+      --bubble-sway-type: #{sample($sway-type)};
+    }
+  }
+}
+
+@keyframes float-up {
+  to {
+    transform: translateY(-175vh);
+  }
+}
+
+@keyframes sway-left-to-right {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes sway-right-to-left {
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+
+/************Section 5 CSS Start************/
+#section5 h2::after{
+  content: '';
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #627b80;
+    bottom: 0; 
+    margin-top: 5px;
+}
+#section5 .box {
+  position: relative;
+}
+
+#section5 .box-content {
+  position: absolute;
+  bottom:20px;
+  left: 20px;
+}
+
+#section5 .box-content  h3{
+  color: #fff;
+}
+
+#section5 .box-content  button{
+  border:1px solid #fff;
+  border-radius: 0px;
+  color: #fff;
+}
+
+figure {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	overflow: hidden;
 }
 
 
 
 
+.hover06  figure img {
+	-webkit-transform: rotate(15deg) scale(1.4);
+	transform: rotate(15deg) scale(1.4);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover06 figure:hover img {
+	-webkit-transform: rotate(0) scale(1);
+	transform: rotate(0) scale(1);
+}
+
+/************section 5 css ends*********/
+
+/************section 6 css start*********/
+
+
+#section6 h2::after{
+  content: '';
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #627b80;
+    bottom: 0; 
+    margin-top: 5px;
+}
+
+#section6 button i{
+  padding-left: 10px;
+}
+
+#section6 img{
+  height: 600px;
+  object-fit: cover;
+}
+
+#section6 .col-md-4.col-12{
+  padding-top: 9rem;
+}
+
+#section6  .sec6-img {
+  position: relative;
+  width: 360px;
+  height: 640px;
+  background: rgba(0, 0, 0, 0);
+  transition: 0.5s;
+}
+#section6  .sec6-img img {
+  position: absolute;
+  width: 100%;
+  transition: 0.5s;
+}
+#section6  .sec6-img:hover img:nth-child(4) {
+  transform: translate(-120px, 120px);
+  opacity: 1;
+}
+#section6  .sec6-img:hover img:nth-child(3) {
+  transform: translate(-80px, 80px);
+  opacity: 0.8;
+}
+#section6  .sec6-img:hover img:nth-child(2) {
+  transform: translate(-40px,40px);
+  opacity: 0.6;
+}
+#section6  .sec6-img:hover img:nth-child(1) {
+  transform: translate(-10px, 10px);
+  opacity: 0.4;
+}
+/***********section 6 css ends**********/
+
+#section7{
+  background-image: url("assets/img/sec-bg2.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+#section7 h2::after{
+  content: '';
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #627b80;
+    bottom: 0; 
+    margin-top: 5px;
+}
+
+#section7 button i{
+  padding-left: 10px;
+}
+
+#section7 .card{
+  border:none;
+  border-radius: 10px;
+  background-color: #e7e3dc;
+}
+
+#section7 .col-left{
+  padding-top: 10rem;
+}
+
+
+
+
+
+/**************Section 8  css Start ************/
+#section-slider .box{
+  margin: 1rem;
+  box-shadow: 0 0 4px #00000066;
+  padding: 1rem
+
+}
+
+/**************Section 8 css End ************/
