--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       <div class = "row">
         <div class = "col-md-6">
           <div>
-            <img src = "assets/img/sec1-img.png" width="100%">
+            <img src = "{{assetspath}}/img/sec1-img.png" width="100%">
           </div>
         </div>
         <div class = "col-md-6">
