--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,16 @@
           <li class="nav-item rounded">
             <a class="nav-link" routerLink = "library" routerLinkActive = "active">Our Process</a>
           </li>
+          <li class="nav-item dropdown">
+            <div class="dropdown">
+              <a href = "#" class=" nav-link dropbtn">Dropdown <i class = "fa fa-angle-down"></i></a>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
+          </li>
           <li class="nav-item rounded">
             <a class="nav-link" routerLink = "contact" routerLinkActive = "active">Our Story</a>
           </li>
