--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       <div class = "row">
         <div class = "col-md-6">
           <div>
-            <img src = "{{assetspath}}/img/sec1-img.png" width="100%">
+            <img src = "assets/img/sec1-img.png" width="100%">
           </div>
         </div>
         <div class = "col-md-6">
@@ -40,30 +40,6 @@
   </section>
   <!-----------Section 3 starts--------->
   <section id = "section3">
-    <div class="bubbles">
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
-      <div class="bubble"></div>
       <div class = "container">
         <div class = "box">
           <h2>Our Success</h2>
@@ -71,7 +47,6 @@
           <button type = "button" class = "btn blue-btn">Our Success<i class = "fa fa-angle-right"></i></button>
         </div>
       </div>
-    </div>
   </section>
   <!-----------Section 3 Ends--------->
   <!-----------Section 4 starts--------->
@@ -256,6 +231,18 @@
   </section>
   <!-----------Section 7 Ends--------->
 
+  <!-----------Section 8 Starts--------->
+  <section id = "section8">
+    <div class = "container">
+      <div class = 'text-center'>
+        <h2 class = "mb-0">Broken Symmetry</h2>
+        <h6 class = "py-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
+          text of the printing and typesetting industry.
+        </h6>
+      </div>
+    </div>
+  </section>
+  <!-----------Section 8 Ends--------->
 
 
 <section id = "section-slider">
