--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
     <div class = "container">
       <div class = "row">
         <div class = "col-md-6">
-          <div>
+          <div class = "sec1-img">
             <img src = "assets/img/sec1-img.png" width="100%">
           </div>
         </div>
@@ -24,7 +24,7 @@
           <div class = "sec1-col2">
             <h2>Our Story</h2>
             <p class = "py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique quo velit, facilis iure ea magni sequi voluptatum ratione beatae harum corrupti eos ut ipsa vero ex natus porro suscipit, deleniti asperiores ducimus rerum totam! Autem impedit cumque, nostrum ut veritatis quis blanditiis quidem, magnam aliquam maiores, error minima rem?</p>
-            <button type = "button" class = "btn blue-btn">Our Story<i class = "fa fa-angle-right"></i></button>
+            <button type = "button" class = "btn blue-btn">Our Story</button>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
         <div class = "box">
           <h2>Our Success</h2>
           <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. Praesent tincidunt, dolor vitae rutrum tincidunt, lacus lectus euismod justo, ut tincidunt erat lorem ut ex. Fusce vitae interdum lorem. Aliquam blandit facilisis risus non fringilla. Duis accumsan nulla at ligula vehicula, quis fermentum nisl dignissim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem. Proin nulla velit, vestibulum vitae lobortis quis, consequat a nulla. </p>
-          <button type = "button" class = "btn blue-btn">Our Success<i class = "fa fa-angle-right"></i></button>
+          <button type = "button" class = "btn blue-btn">Our Success</button>
         </div>
       </div>
   </section>
@@ -57,11 +57,11 @@
           <div class = "sec1-col2">
             <h2>Meet Resolute</h2>
             <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget turpis ac justo sagittis rhoncus ut id sem.</p>
-            <button type = "button" class = "btn blue-btn">Shop Now<i class = "fa fa-angle-right"></i></button>
+            <button type = "button" class = "btn blue-btn">Shop Now</button>
           </div>
         </div>
         <div class = "col-md-6">
-          <div>
+          <div class ="sec4-img">
             <img src = "assets/img/sec4-img.png" width="100%">
           </div>
         </div>
@@ -160,7 +160,7 @@
           <div>
             <h2>Flat & Knotted</h2>
             <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-            <button type = "button" class = "btn blue-btn">Find More <i class = "fa fa-angle-right"></i></button>
+            <button type = "button" class = "btn blue-btn">Find More</button>
           </div>
         </div>
       </div>
@@ -175,7 +175,7 @@
           <div class = "col-left">
             <h2>Our Collection</h2>
             <p class = "py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-            <button type = "button" class = "btn blue-btn">Find More <i class = "fa fa-angle-right"></i></button>
+            <button type = "button" class = "btn blue-btn">Find More</button>
           </div>
         </div>
         <div class  = "col-md-6">
@@ -183,7 +183,10 @@
             <div class = "col-md-6">
               <a href  = "#">
                 <div class="card">
-                  <img src="assets/img/collection1.jpg" class="card-img-top" alt="...">
+                  <div class = "card_img">
+                    <img src="assets/img/collection1.jpg" class="card-img-top" alt="...">
+                  </div>
+                
                   <div class="card-body text-center">
                     <h5 class="card-title mb-0">$80.00
                     </h5>
@@ -194,7 +197,9 @@
             <div class = "col-md-6 ">
               <a href  = "#">
                 <div class="card">
-                  <img src="assets/img/collection2.jpg" class="card-img-top" alt="...">
+                  <div class = "card_img">
+                    <img src="assets/img/collection2.jpg" class="card-img-top" alt="...">
+                  </div>
                   <div class="card-body text-center">
                     <h5 class="card-title mb-0">$90.00
                     </h5>
@@ -205,7 +210,9 @@
             <div class = "col-md-6 pt-4">
               <a href  = "#">
                 <div class="card">
-                  <img src="assets/img/collection3.jpg" class="card-img-top" alt="...">
+                  <div class = "card_img">
+                    <img src="assets/img/collection3.jpg" class="card-img-top" alt="...">
+                  </div>
                   <div class="card-body text-center">
                     <h5 class="card-title mb-0">$70.00
                     </h5>
@@ -216,7 +223,9 @@
             <div class = "col-md-6 pt-4">
               <a href  = "#">
                 <div class="card">
-                  <img src="assets/img/collection4.jpg" class="card-img-top" alt="...">
+                  <div class = "card_img">
+                    <img src="assets/img/collection4.jpg" class="card-img-top" alt="...">
+                  </div>
                   <div class="card-body text-center">
                     <h5 class="card-title mb-0">$85.00
                     </h5>
